--- a/Modulo 5 - Requsições/Aula 11 - Projeto Blog JSONPlaceHolder/index.html
+++ b/Modulo 5 - Requsições/Aula 11 - Projeto Blog JSONPlaceHolder/index.html
@@ -25,20 +25,38 @@
 
     <!-- Referencia -->
 
-    <!-- <div class="postField">
-        <div class='postHeader'>
-            <div>
-                <h1> Titulo teste</h1>
+    <div class="postLine">
+        <div class="postField">
+            <div class='postHeader'>
+                <div>
+                    <h1> Titulo teste</h1>
+                </div>
+                <div class="postUser">
+                    <h2>Ramatra</h2>
+                    <img src="Assets/img/Kiriko.webp" alt="">
+                </div>
             </div>
-            <div class="postUser">
-                <h2>Ramatra</h2>
-                <img src="Assets/img/Kiriko.webp" alt="">
+            <div class="postBody">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi reiciendis officia voluptates inventore! Quam eveniet dolorem sint. Deleniti ducimus quam expedita pariatur, rem aliquam ratione architecto ipsa eligendi commodi!</p>
             </div>
         </div>
-        <div class="postBody">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi reiciendis officia voluptates inventore! Quam eveniet dolorem sint. Deleniti ducimus quam expedita pariatur, rem aliquam ratione architecto ipsa eligendi commodi!</p>
+
+        <div class="postField">
+            <div class='postHeader'>
+                <div>
+                    <h1> Titulo teste</h1>
+                </div>
+                <div class="postUser">
+                    <h2>Ramatra</h2>
+                    <img src="Assets/img/Kiriko.webp" alt="">
+                </div>
+            </div>
+            <div class="postBody">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nisi reiciendis officia voluptates inventore! Quam eveniet dolorem sint. Deleniti ducimus quam expedita pariatur, rem aliquam ratione architecto ipsa eligendi commodi!
+                </p>
+            </div>
         </div>
-    </div> -->
+    </div>
 
     <script src="./Assets/js/user.js"></script>
     <script src="./Assets/js/script.js"></script>
